<resources>
    <string name="app_name">TP1</string>
    <string name="welcome">Welcome to the App</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="insertnote">Create Note</string>
    <string name="emptynote">Note empty: not inserted</string>
    <string name="inserttitle">Title</string>
    <string name="insertdescription">Description</string>
    <string name="insert">Done</string>
    <string name="editerror">Error on edit</string>
    <string name="alerttitle">Delete Note?</string>
    <string name="yesdelete">Yes</string>
    <string name="nodelete">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="emptyfields">Don´t Leave Empty Fields</string>
    <string name="saved">Saved</string>
    <string name="alertreport">Delete Report?</string>
    <string name="reportdeleted">Report Deleted</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="emptyfield">Title or description empty</string>
    <string-array name="type">
        <item>Accident</item>
        <item>Construction</item>
        <item>Sanitation</item>
    </string-array>
    <string name="acidents">Accidents</string>
    <string name="construction">Construction</string>
    <string name="sanitation">Sanitation</string>
    <string name="preference_file_key" translatable="false">file1</string>
    <string name="sound" translatable="false">sound</string>
    <string name="sharedpref" translatable="false">Shared Preferences File</string>
    <string name="id">ID</string>
    <string name="more">More</string>
    <string name="checkboxlogin">Remember Me</string>
    <string name="spusername" translatable="false">SharedPreferences Username</string>
    <string name="spid" translatable="false">SharedPreferences ID</string>
    <string name="checked" translatable="false">Checkbox Checked</string>
    <string name="allreports">All Reports</string>
    <string name="image">Image</string>
</resources>